--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Kyle L. Jensen",
   "license": "Unlicense",
   "dependencies": {
-    "puppeteer": "^1.19.0"
+    "nunjucks": "^3.2.0",
+    "puppeteer": "^1.19.0",
+    "html-validator": "^5.0.0",
+    "js-yaml": "^3.13.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
