--- a/config.yaml
+++ b/config.yaml
@@ -8,19 +8,20 @@ scenarios:
         desc: |
           I get a "200 OK" HTTP response. This basically just means
           that your website is up.
+      - it: has a title
+        slug: title
+        desc: |
+          I test for a non-zero length string in the <title></title> tags of the
+          page. Your title is "{{title}}"
       - it: has valid HTML
         slug: valid
         desc: |
-          I run your homepage through an
-  - when: I visit the homepage at {{url}}
-    slug: homepage
+          I run your homepage through https://validator.w3.org/nu to check it
+          for errors.
+  - when: I visit the about page at {{url}}/about
+    slug: about
     tests:
-      - it: is "up"
-        slug: up
+      - it: exists
+        slug: exists
         desc: |
-          I get a "200 OK" HTTP response. This basically just means
-          that your website is up.
-      - it: has valid HTML
-        slug: valid
-        desc: |
-          I run your homepage through an 
+          I get a "200 OK" HTTP response. 
