--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ volumes:
   node_modules:
 services:
   test:
-    build: .
-    entrypoint: node ./src/index.js
+    image: "$IMG"
+    entrypoint: node ./index.js
     volumes:
-      - .:/app/src
+      - .:/app
       - node_modules/:/app/node_modules/
