--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "author": "Kyle L. Jensen",
   "license": "Unlicense",
   "dependencies": {
-    "nunjucks": "^3.2.0",
-    "puppeteer": "^1.19.0",
     "html-validator": "^5.0.0",
-    "js-yaml": "^3.13.1",
-    "yup": "^0.27.0",
     "immer": "^4.0.1",
+    "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
-    "validator": "^11.1.0"
+    "nunjucks": "^3.2.0",
+    "pa11y": "^5.3.0",
+    "puppeteer": "^1.19.0",
+    "validator": "^11.1.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
