--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pa11y": "^5.3.0",
     "puppeteer": "^1.19.0",
     "validator": "^11.1.0",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "chance": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
