--- a/config.yaml
+++ b/config.yaml
@@ -185,3 +185,23 @@ scenarios:
           Your JSON should be formatted such that it has a key "events" that stores an array of
           events. E.g. it should looks something like this
           https://bit.ly/2J5IA2g
+
+  - when: I visit your API at /api/events/{{event.id}}
+    key: apiEventDetail
+    tests:
+      - it: exists
+        key: exists
+        desc: >
+          I get a HTTP 200 OK response.
+
+      - it: is valid JSON format
+        key: json
+        desc: >
+          I try to parse your response assuming it is valid JSON.
+          Errors make the test fail.
+
+      - it: has the right event information
+        key: info
+        desc: >
+          I should find that it has the right title information. The
+          title should be "{{title}}".
