--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "author": "Kyle L. Jensen",
   "license": "Unlicense",
   "dependencies": {
+    "chance": "^1.1.3",
     "html-validator": "^5.0.0",
     "immer": "^4.0.1",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
+    "moment": "^2.24.0",
     "nunjucks": "^3.2.0",
     "pa11y": "^5.3.0",
     "puppeteer": "^1.19.0",
     "validator": "^11.1.0",
-    "yup": "^0.27.0",
-    "chance": "^1.1.3"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
