--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
   test:
     image: "$IMG"
     entrypoint: node ./index.js
+    environment:
+      - DEVELOPMENT=true
     volumes:
       - .:/app
       - node_modules/:/app/node_modules/
